# snake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
include/: functions.hpp  geometry.hpp  glibs.hpp  object.hpp  point.hpp  render.hpp  settings.hpp  snake.hpp
source/: functions.cpp  geometry.cpp  main.cpp  object.cpp  point.cpp  render.cpp  settings.cpp  snake.cpp
